fix double scroll bars

--- a/css/app.css
+++ b/css/app.css
@@ -75,3 +75,7 @@
     -ms-user-select: none;
     user-select: none;
 }
+.loader {
+    position: relative !important;
+    top: 4em !important;
+}
